force-app/main/default/objects/Collaboration__c/Collaboration__c.object-meta.xml
<CustomObject>
    <label>Collaboration</label>
    <nameField>
        <label>Collaboration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collaboration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>