force-app/main/default/objects/Collaboration__c/fields/CDA_on_File__c.field-meta.xml
<CustomField>
    <fullName>CDA_on_File__c</fullName>
    <description>Yes/No field for if an agreement is on file.</description>
    <label>CDA on File</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>