force-app/main/default/objects/Collaboration__c/fields/Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration_Date__c</fullName>
    <description>Contract expiration date</description>
    <label>Contract Expiration Date</label>
    <type>Date</type>
</CustomField>