force-app/main/default/objects/Collaboration__c/fields/Secondary_Internal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Internal_Contact__c</fullName>
    <description>Secondary internal contact user lookup</description>
    <label>Secondary Internal Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>